[metadata]
name = mcr-experiments
version = 0.0.1
author = Anonomyzed
author_email = anonomyzed@hello.com
description = Python package for experiments for the Meaningful Algorithmic Recourse paper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anonomyzed-submission/mcr
project_urls =
    Bug Tracker = https://github.com/anonomyzed-submission/mcr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
